--- a/styles.css
+++ b/styles.css
@@ -111,3 +111,19 @@ img {
   button:active {
     transform: scale(0.98);
   }
+
+
+/* 14. Flexbox */
+.flex-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  
+  /* 15. Grid */
+  .grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+  }
