--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ nav ul {
     list-style-type: none;
 }
   details {
-    background-color: color-mix(in srgb, lightblue 30%, white 70%);
+    background-color: #dcefff;
 }
   nav ul li {
     margin: 0.5rem 0;
